2014-10-11 Ben Shi <powerstudio1st AT 163.com>
	* src/stm8/gen.c:
	  Delete temporary code stm_sub_func().
	* device/stm8/_modsint_stm8.s:
	* device/stm8/_mulint_stm8.s:
	* device/stm8/_divsint_stm8.s:
	* device/stm8/_mullong_stm8.s:
	  Deleted.
	* device/stm8/_modsint.s:
	* device/stm8/_mulint.s:
	* device/stm8/_divsint.s:
	* device/stm8/_mullong.s:
	  Added.
	* device/stm8/Makefile.in:
	  Use the above new added .s files.

2014-10-09 Ben Shi <powerstudio1st AT 163.com>
	* src/stm8/gen.c:
	  Add stm_sub_func() for future more stm8 optimized functions.
	* src/stm8/peeph.def:
	  Remove redundant rules.

2014-10-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: Updated to the gputils-1.4.0 .

2014-09-29 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/_mullong_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of _mullong.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.

2014-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Removed or simplification peepholes.

2014-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Remove negation by inverting jump condition.
	* src/SDCCcse.c:
	  Remove cast at conditional jump.
	* device/include/ctype.h:
	  Simplify classification functions.

2014-09-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (mergeSpec): added check for both static and extern
	  (checkFunction): merge static or extern and check
	* device/include/ctype.h: replaced macros with direct inline versions
	* device/lib/isdigit.c,
	* device/lib/islower.c,
	* device/lib/isupper.c: replaced definitions with extern declaration to give
	  inline versions external linkage

2014-09-22 Ben Shi <powerstudio1st AT 163.com>

	* device/lib/stm8/_modsint_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of _modsint.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.
